[tool.poetry]
name = "python-dciagent"
version = "0.1.0"
description = "A python framework for DCI agents"
authors = ["Distributed CI team <distributed-ci@redhat.com>"]
license = "Apache-2.0"
packages = [
    { include = "dciagent" }
]

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"
click = [
    { version = "^7.1.2", python = "^2.7" },
    { version = "^8.0.1", python = "^3.6" }
]
ansible-runner = "^1.4.7"

[tool.poetry.dev-dependencies]
pytest = [
    { version = "^4.6", python = "^2.7" },
    { version = "^6.2", python = "^3.6" }
]

[tool.poetry.scripts]
agent-ctl = "dciagent.main:cli"

[tool.black]
line-length = 88
target_version = ['py27', 'py36']

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
