[tool.poetry]
name = "python-dciagent"
version = "0.0.2"
description = "A python framework for DCI agents"
authors = ["Distributed CI team <distributed-ci@redhat.com>"]
license = "Apache-2.0"
packages = [
    { include = "dciagent" }
]

[tool.poetry.dependencies]
python = "^3.6.8"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pre-commit = "^2.16.0"
# needs to be compatible with click ^6.7
black = "^21.12b0"

[tool.poetry.scripts]
dci-agent-ctl = "dciagent.cli:main"

[tool.black]
line-length = 88
target_version = ['py36']
extend-exclude = '''
/(
  | __pycache__
  | .pytest_cache
  | .*\.egg-info
)/
'''

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
